Finally - colorpicker fixed on mobile. 0 width had to do with it.

--- a/API/RedAlert.API/RedAlert.API/Content/tinycolorpicker.css
+++ b/API/RedAlert.API/RedAlert.API/Content/tinycolorpicker.css
@@ -28,8 +28,8 @@
     }
 
     #colorPicker .color {
-        width: 0px;
-        height: 0px;
+        width: 1px;
+        height: 1px;
         display: block;
         position: relative;
     }
